# crdt-data-types

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  run-demo-server.sh
benches/: delta_bench.rs  layout_bench.rs  merge_bench.rs
demo-server/: Cargo.toml  README.md
demo-server/src/: index.html  main.rs
examples/: size_comparison.rs
proto/: count_min_sketch.capnp  deltas.capnp  fww_register.capnp  gcounter.capnp  gset.capnp  hyperloglog.capnp  lww_map.capnp  lww_register.capnp  lww_set.capnp  mv_register.capnp  or_map.capnp  orset.capnp  pncounter.capnp  roaring_bitmap.capnp  tdigest.capnp  topk.capnp  vclock.capnp
src/: bridge.rs  compaction.rs  deltas.rs  enums.rs  fww_register.rs  g_counter.rs  g_set.rs  lib.rs  lww_map.rs  lww_register.rs  lww_set.rs  mv_register.rs  or_map.rs  or_set.rs  pn_counter.rs  traits.rs  vector_clock.rs
src/bridge/: deltas.rs  merging.rs  mod.rs  serialization.rs
src/probabilistic/: count_min_sketch.rs  hyperloglog.rs  mod.rs  roaring_bitmap.rs  tdigest.rs  topk.rs
tests/: additive_merge_tests.rs  advanced_coverage_tests.rs  basic_tests.rs  bridge_tests.rs  coverage_boost_tests.rs  delta_capnp_tests.rs  delta_tests.rs  full_coverage_tests.rs  probabilistic_tests.rs  property_tests.rs
