[package]
name = "crdt-data-types"
version = "0.1.0"
edition = "2021"
description = "High-performance CRDT library with dual pathways: JSON-native for web APIs and Cap'n Proto zero-copy for binary transport"
authors = ["Adrian Robinson <adrian.j.robinson@gmail.com>"]

[workspace]
members = ["demo-server"]

[dependencies]
capnp = "0.18"
capnp-rpc = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
thiserror = "1.0"

[build-dependencies]
capnpc = "0.18"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
proptest = "1.0"
paste = "1.0.15"
criterion = "0.8.1"

[[bench]]
name = "merge_bench"
harness = false

[[bench]]
name = "layout_bench"
harness = false
