[package]
name = "crdt-data-types"
version = "0.1.4"
edition = "2021"
description = "High-performance CRDT library with dual pathways: JSON-native for web APIs and Cap'n Proto zero-copy for binary transport"
authors = ["Adrian Robinson <adrian.j.robinson@gmail.com>"]
license = "MIT"
repository = "https://github.com/transilluminate/crdt-data-types"
readme = "README.md"
keywords = ["crdt", "capnproto", "distributed-systems", "json", "zero-copy"]
categories = ["data-structures", "algorithms", "network-programming"]

[workspace]
members = ["demo-server"]

[dependencies]
capnp = "0.18"
capnp-rpc = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
thiserror = "1.0"
siphasher = { version = "1.0.1", optional = true }
roaring = { version = "0.11.3", optional = true }
tdigest = { version = "0.2", optional = true, features = ["use_serde"] }
ordered-float = { version ="2.10.1", optional = true }

[features]
default = []
probabilistic = ["dep:siphasher", "dep:roaring", "dep:tdigest", "dep:ordered-float"]

[build-dependencies]
capnpc = "0.18"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
proptest = "1.0"
paste = "1.0.15"
criterion = "0.8.1"

[[bench]]
name = "merge_bench"
harness = false

[[bench]]
name = "layout_bench"
harness = false
