[package]
name = "demo-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
seahash = "4.1"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
dashmap = "5.5"
crossbeam-channel = "0.5" # For high-perf lane communication if needed, or just mpsc

# Local dependency
crdt-data-types = { path = "../" }
rand = "0.9.2"
